--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
                                 <use xlink:href="#mouth">
                             </svg>
                         </div>
+                        Very Unpleasant
                     </li>
                     <li class="sad">
                         <div>
@@ -202,9 +203,11 @@
                                 <use xlink:href="#mouth">
                             </svg>
                         </div>
+                        Unpleasant
                     </li>
                     <li class="ok">
                         <div></div>
+                        Neither Pleasant nor Unpleasant
                     </li>
                     <li class="good">
                         <div>
@@ -218,6 +221,7 @@
                                 <use xlink:href="#mouth">
                             </svg>
                         </div>
+                        Pleasant
                     </li>
                     <li class="happy">
                         <div>
@@ -228,6 +232,7 @@
                                 <use xlink:href="#eye">
                             </svg>
                         </div>
+                        Very Pleasant
                     </li>
                 </ul>
                 <button class="btn-confirm-rate">add feedback</button>
@@ -2321,53 +2326,11 @@
                     <div class="reatePox">
                       <h2>4.46</h2>
                       <p>Overall Rating</p>
-                      <div class="stars" style="display: flex; align-items: center; margin: 0 5px">
+                      <div class="stars">
                         <span class="rate-data">93.75%</span>
-                        <div class="star"><svg height="25" width="25" viewBox="0 0 25 25">
-                            <linearGradient id="c1_1" x1="0%" x2="100%" y1="0" y2="0">
-                              <stop offset="100%" stop-color="var(--bps-star--filled, #702283)"></stop>
-                              <stop offset="100%" stop-color="var(--bps-star, #e1e8ed)"></stop>
-                            </linearGradient>
-                            <path
-                              d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
-                              fill="url(#c1_1)"></path>
-                          </svg></div>
-                        <div class="star"><svg height="25" width="25" viewBox="0 0 25 25">
-                            <linearGradient id="c1_2" x1="0%" x2="100%" y1="0" y2="0">
-                              <stop offset="100%" stop-color="var(--bps-star--filled, #702283)"></stop>
-                              <stop offset="100%" stop-color="var(--bps-star, #e1e8ed)"></stop>
-                            </linearGradient>
-                            <path
-                              d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
-                              fill="url(#c1_2)"></path>
-                          </svg></div>
-                        <div class="star"><svg height="25" width="25" viewBox="0 0 25 25">
-                            <linearGradient id="c1_3" x1="0%" x2="100%" y1="0" y2="0">
-                              <stop offset="100%" stop-color="var(--bps-star--filled, #702283)"></stop>
-                              <stop offset="100%" stop-color="var(--bps-star, #e1e8ed)"></stop>
-                            </linearGradient>
-                            <path
-                              d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
-                              fill="url(#c1_3)"></path>
-                          </svg></div>
-                        <div class="star"><svg height="25" width="25" viewBox="0 0 25 25">
-                            <linearGradient id="c1_4" x1="0%" x2="100%" y1="0" y2="0">
-                              <stop offset="100%" stop-color="var(--bps-star--filled, #702283)"></stop>
-                              <stop offset="100%" stop-color="var(--bps-star, #e1e8ed)"></stop>
-                            </linearGradient>
-                            <path
-                              d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
-                              fill="url(#c1_4)"></path>
-                          </svg></div>
-                        <div class="star"><svg height="25" width="25" viewBox="0 0 25 25">
-                            <linearGradient id="c1_5" x1="0%" x2="100%" y1="0" y2="0">
-                              <stop offset="70%" stop-color="var(--bps-star--filled, #702283)"></stop>
-                              <stop offset="40%" stop-color="var(--bps-star, #e1e8ed)"></stop>
-                            </linearGradient>
-                            <path
-                              d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
-                              fill="url(#c1_5)"></path>
-                          </svg></div>
+                        <div class="star-rating">
+                          <span style="width: 60%"></span>
+                        </div>
                         <span class="rate-data">4.69/5</span>
                       </div>
                     </div>
@@ -4374,4 +4337,3 @@
       });
     });
   </script>
-802744c9ee537
