--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <link href="assets/plugins/global/microtip.min.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-  <!-- <link href="assets/css/style.dark.css" rel="stylesheet" type="text/css" /> -->
-  <link href="assets/css/style.light.css" rel="stylesheet" type="text/css" />
+  <link href="assets/css/style.dark.css" rel="stylesheet" type="text/css" />
+  <!-- <link href="assets/css/style.light.css" rel="stylesheet" type="text/css" /> -->
 </head>
 
 <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled">
@@ -2341,6 +2341,9 @@
                       <div class="forflex">
                         <h2>Subscriber satisfaction</h2>
                         <h1>Promoter</h1>
+                        <h3 class="total-answer">
+                          user name <span>2</span>
+                        </h3>
                       </div>
                     </div>
                   </div>
